[package]
name = "shipengine"
version = "0.0.2"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["shipengine", "api"]
categories = ["web-programming", "api-bindings"]
description = "ShipEngine API"
repository = "https://github.com/apibillme/shipengine"
readme = "README.md"

[dependencies]
